# pigments

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/adaptation/: mod.rs  vonkries.rs
src/colorimetry/: mod.rs
src/colorimetry/illuminants/: chromaticity.rs  mod.rs  spectrum.rs
src/models/: bt2020.rs  cie_lab.rs  cie_luv.rs  cie_ucs.rs  cie_uvw.rs  cie_xyy.rs  cie_xyz.rs  cmy.rs  cmyk.rs  hex.rs  hsl.rs  hsv.rs  ipt.rs  jzazbz.rs  mod.rs  spectral.rs  yiq.rs  yuv.rs
src/models/rgb/: mod.rs
src/models/rgb/color_space/: adobe_rgb_1998.rs  mod.rs
